<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/rounded_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_background">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/telecom"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:gravity="left"
                    android:textSize="50px"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_product_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="50px"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price"
                    android:gravity="left"
                    android:textSize="50px"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_product_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="50px"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_num"
                    android:gravity="left"
                    android:textSize="50px"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_phone_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="50px"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/provider_name"
                    android:gravity="left"
                    android:textSize="50px"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_provider_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="50px"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_vercode"
                    android:textSize="50px"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/et_vercode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50px"
                    android:background="@drawable/edit_background"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_exit"
            android:background="@drawable/btn_background"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/img_entry_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/cancel" />
</RelativeLayout>
